# TrackMedoc

./: .gitignore  docker-compose.yml
TruckMedoc/: .dockerignore  CMakeLists.txt  CMakeLists.txt.backup  CMakePresets.json  Dockerfile  README.md  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.txt  conanfile.txt.backup  fmt-release-x86_64-data.cmake  httplib-config-version.cmake  httplib-config.cmake  httplib-release-x86_64-data.cmake  spdlog-release-x86_64-data.cmake
TruckMedoc/include/: CMakeCache.txt
TruckMedoc/src/: main.cpp
infra/: .gitignore  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
k8s/base/api/: api-configmap.yaml  api-deployment.yaml
k8s/base/common/: namespace.yaml
k8s/base/frontend/: frontend-deployment.yaml  ingress.yaml
k8s/base/mysql/: mysql-deployment.yaml  mysql-init-configmap.yaml
k8s/monitoring/: api-servicemonitor.yaml  truckmedoc-alerts.yaml  truckmedoc-dashboard.json
molecule-dashboard/: Dockerfile  package-lock.json  package.json
molecule-dashboard/src/: App.tsx
molecule-dashboard/src/Pages/: Dashboard.tsx
molecule-dashboard/src/app/: store.ts
molecule-dashboard/src/components/: Chart.tsx
molecule-dashboard/src/features/molecules/: MoleculeFrom.tsx  moleculeSlice.ts
